src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Order_Type__c</fullName>
        <label>Order Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Budget Order</fullName>
                    <default>true</default>
                    <label>Budget Order</label>
                </value>
                <value>
                    <fullName>View Order</fullName>
                </value>
                <value>
                    <fullName>Impression Order</fullName>
                </value>
                <value>
                    <fullName>Reach Order</fullName>
                </value>
                <value>
                    <fullName>Click Order</fullName>
                </value>
                <value>
                    <fullName>Link Click Order</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <label>Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Net 30</fullName>
                    <default>true</default>
                    <label>Net 30</label>
                </value>
                <value>
                    <fullName>Net 45</fullName>
                </value>
                <value>
                    <fullName>Net 60</fullName>
                </value>
                <value>
                    <fullName>Net 90</fullName>
                </value>
                <value>
                    <fullName>Net 120</fullName>
                </value>
                <value>
                    <fullName>50/50</fullName>
                </value>
                <value>
                    <fullName>100% Upfront</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Percent_Margin__c</fullName>
        <label>% Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <label>Platform</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Adwords CPM</fullName>
                </value>
                <value>
                    <fullName>DBM RTB</fullName>
                </value>
                <value>
                    <fullName>DBM TrueView</fullName>
                </value>
                <value>
                    <fullName>Facebook</fullName>
                </value>
                <value>
                    <fullName>Google Search</fullName>
                </value>
                <value>
                    <fullName>LinkedIn</fullName>
                </value>
                <value>
                    <fullName>Pinterest</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Snapchat</fullName>
                </value>
                <value>
                    <fullName>TrueView</fullName>
                </value>
                <value>
                    <fullName>Twitter</fullName>
                </value>
                <value>
                    <fullName>Amazon</fullName>
                </value>
                <value>
                    <fullName>Reddit</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Instagram</fullName>
                    <isActive>false</isActive>
                    <label>Instagram</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Platforms__c</fullName>
        <label>Platforms</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Probability__c</fullName>
        <formula>Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Probability</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Proposal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Proposal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Qualification_Notes__c</fullName>
        <label>Qualification Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RFP_Due_Date__c</fullName>
        <inlineHelpText>On what date would you like the audit/proposal to get back to you?</inlineHelpText>
        <label>Audit/Proposal Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reason_Formula__c</fullName>
        <formula>TEXT(Closed_Lost_Reason__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reason Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>text(Account.Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StrikeIDtext__c</fullName>
        <label>StrikeIDtext</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Strike_ID__c</fullName>
        <formula>if(isblank(ContractStrikeID__c), OppNumber__c, ContractStrikeID__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Strike ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Targeting__c</fullName>
        <description>Age, Location, etc.</description>
        <label>Targeting</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Trial_Notes__c</fullName>
        <label>Trial Notes</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Verticals__c</fullName>
        <label>Content Verticals</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Auto</fullName>
                </value>
                <value>
                    <fullName>Banking</fullName>
                </value>
                <value>
                    <fullName>Beauty</fullName>
                </value>
                <value>
                    <fullName>Beer</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Cooking</fullName>
                </value>
                <value>
                    <fullName>DIY</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Entertainment</fullName>
                </value>
                <value>
                    <fullName>Fashion</fullName>
                </value>
                <value>
                    <fullName>Fitness</fullName>
                </value>
                <value>
                    <fullName>Food</fullName>
                </value>
                <value>
                    <fullName>Gaming</fullName>
                </value>
                <value>
                    <fullName>Govermnent</fullName>
                </value>
                <value>
                    <fullName>Health</fullName>
                </value>
                <value>
                    <fullName>Home &amp; Garden</fullName>
                </value>
                <value>
                    <fullName>Moms</fullName>
                </value>
                <value>
                    <fullName>Movies</fullName>
                </value>
                <value>
                    <fullName>Music</fullName>
                </value>
                <value>
                    <fullName>News</fullName>
                </value>
                <value>
                    <fullName>Pets</fullName>
                </value>
                <value>
                    <fullName>Science</fullName>
                </value>
                <value>
                    <fullName>Sports</fullName>
                </value>
                <value>
                    <fullName>Tech</fullName>
                </value>
                <value>
                    <fullName>Toys</fullName>
                </value>
                <value>
                    <fullName>Travel</fullName>
                </value>
                <value>
                    <fullName>TV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Video_Length__c</fullName>
        <label>Available Assets</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Static Image</fullName>
                </value>
                <value>
                    <fullName>6 sec. Video</fullName>
                </value>
                <value>
                    <fullName>15 sec. Video</fullName>
                </value>
                <value>
                    <fullName>30 sec. Video</fullName>
                </value>
                <value>
                    <fullName>60 sec. Video</fullName>
                </value>
                <value>
                    <fullName>60+ sec. Video</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X1st_Opportunity_Open_Date__c</fullName>
        <formula>BrandAccount__r.X1st_Opportunity_Open_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>1st Opportunity Open Date</label>
        <type>Date</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Strike_ID__c</columns>
        <columns>Flight_Start__c</columns>
        <columns>Flight_End__c</columns>
        <filterScope>Mine</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_MONTHS:3</value>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>Lost</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Strike_ID__c</columns>
        <columns>Flight_Start__c</columns>
        <columns>Flight_End__c</columns>
        <columns>Closed_Lost_Reason__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Closed Lost,No Opportunity</value>
        </filters>
        <label>Lost</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>My_Aging_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Agency</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Aging Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Open_AdWords</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Platforms__c</field>
            <operation>contains</operation>
            <value>AdWords CPM,TrueView,Google Search</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Open AdWords</label>
    </listViews>
    <listViews>
        <fullName>Open_Agency</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Agency</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Open Agency</label>
    </listViews>
    <listViews>
        <fullName>Open_Brand_Direct</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Brand_Direct</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Open Brand Direct</label>
    </listViews>
    <listViews>
        <fullName>Open_Brand_Direct_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Brand_Direct</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Open Brand Direct Opportunities</label>
    </listViews>
    <listViews>
        <fullName>Open_DBM</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Platforms__c</field>
            <operation>contains</operation>
            <value>DBM RTB,DBM TrueView</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Open DBM</label>
    </listViews>
    <listViews>
        <fullName>Open_Facebook</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Platforms__c</field>
            <operation>contains</operation>
            <value>Facebook,Instagram</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Open Facebook</label>
    </listViews>
    <listViews>
        <fullName>Open_SaaS</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.SaaS</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Open SaaS</label>
    </listViews>
    <recordTypes>
        <fullName>Agency</fullName>
        <active>true</active>
        <businessProcess>Agency Process</businessProcess>
        <label>Agency</label>
    </recordTypes>
    <recordTypes>
        <fullName>Brand_Direct</fullName>
        <active>true</active>
        <businessProcess>Brand Direct Process</businessProcess>
        <label>Brand Direct</label>
    </recordTypes>
    <recordTypes>
        <fullName>SaaS</fullName>
        <active>false</active>
        <businessProcess>SaaS Process</businessProcess>
        <label>SaaS</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Account_Region_required_on_Closed_Won</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(BypassValidationRule__c) &amp;&amp; 
!PRIORVALUE(BypassValidationRule__c) &amp;&amp; 
ISPICKVAL(StageName,&apos;Closed Won&apos;) &amp;&amp; 
ISPICKVAL(Account.Region__c,&quot;&quot;)</errorConditionFormula>
        <errorMessage>Fill in Region value on related Account</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Amount_For_Closed_Won_Opp</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(BypassValidationRule__c) &amp;&amp; 
!PRIORVALUE(BypassValidationRule__c) &amp;&amp; 
ISPICKVAL(StageName,&apos;Closed Won&apos;) &amp;&amp; 
ISNULL( Amount ) &amp;&amp;
RecordTypeId != $Label.Opportunity_Record_Type_SaaS</errorConditionFormula>
        <errorDisplayField>Amount</errorDisplayField>
        <errorMessage>Please fill in Client Spend value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Audit_Proposal_due_date_required</fullName>
        <active>true</active>
        <description>Forces to fill in Audit/Proposal Due Date field when setting stage to Evaluation and Audit or Proposal is marked</description>
        <errorConditionFormula>NOT(BypassValidationRule__c) &amp;&amp;
!PRIORVALUE(BypassValidationRule__c) &amp;&amp;
ISPICKVAL( StageName , &quot;Evaluation&quot;) &amp;&amp;
(Audit__c || Proposal__c) &amp;&amp;
ISBLANK(RFP_Due_Date__c) &amp;&amp;
RecordTypeId != $Label.Opportunity_Record_Type_SaaS</errorConditionFormula>
        <errorDisplayField>RFP_Due_Date__c</errorDisplayField>
        <errorMessage>Please provide Audi/Proposal Due Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BillingConditionRequiredWhenClosedWon</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(BypassValidationRule__c) &amp;&amp; 
!PRIORVALUE(BypassValidationRule__c) &amp;&amp;
ISBLANK(BillingConditionName__c) &amp;&amp; 
ISPICKVAL(StageName,&apos;Closed Won&apos;) &amp;&amp;
RecordTypeId != $Label.Opportunity_Record_Type_SaaS</errorConditionFormula>
        <errorDisplayField>BillingCondition__c</errorDisplayField>
        <errorMessage>Billing Conditions value is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BrandRequiredFromNegotiatingStage</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(BypassValidationRule__c) &amp;&amp; 
!PRIORVALUE(BypassValidationRule__c) &amp;&amp; 
OR(ISPICKVAL(StageName,&apos;Negotiating &amp; Mutual Plan&apos;),
ISPICKVAL(StageName,&apos;Finalizing Closure&apos;),
ISPICKVAL(StageName,&apos;Pending&apos;),
ISPICKVAL(StageName,&apos;Closed Won&apos;)) &amp;&amp;
ISBLANK( Brand__c ) &amp;&amp;
RecordTypeId != $Label.Opportunity_Record_Type_SaaS</errorConditionFormula>
        <errorDisplayField>Brand__c</errorDisplayField>
        <errorMessage>Please fill in Brand value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BrandRequiredFromProposalStage</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(BypassValidationRule__c) &amp;&amp; 
!PRIORVALUE(BypassValidationRule__c) &amp;&amp; 
(ISPICKVAL(StageName,&apos;Closed Won&apos;) ||
ISPICKVAL(StageName,&apos;Proposal/Price Quote&apos;)) &amp;&amp;
ISBLANK( Brand__c ) &amp;&amp;
RecordTypeId != $Label.Opportunity_Record_Type_SaaS</errorConditionFormula>
        <errorDisplayField>Brand__c</errorDisplayField>
        <errorMessage>Please fill in Brand value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CannotEditBrand</fullName>
        <active>false</active>
        <description>Brand cannot be updated.</description>
        <errorConditionFormula>NOT(BypassValidationRule__c) &amp;&amp; 
!PRIORVALUE(BypassValidationRule__c) &amp;&amp; 
$User.Id != &apos;005U0000003nBsV&apos; &amp;&amp;
NOT(ISBLANK(PRIORVALUE(Brand__c))) &amp;&amp; 
PRIORVALUE(Brand__c) != Brand__c &amp;&amp;
RecordTypeId != $Label.Opportunity_Record_Type_SaaS</errorConditionFormula>
        <errorDisplayField>Brand__c</errorDisplayField>
        <errorMessage>Brand cannot be updated.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Closed_Lost_reason</fullName>
        <active>true</active>
        <description>Prompts for filling in the Reason field upon saving the record as Closed Lost</description>
        <errorConditionFormula>NOT(BypassValidationRule__c) &amp;&amp; 
!PRIORVALUE(BypassValidationRule__c) &amp;&amp; 
ISPICKVAL(StageName, &quot;Closed Lost&quot;)&amp;&amp; 
ISPICKVAL( Closed_Lost_Reason__c,&quot;&quot;)</errorConditionFormula>
        <errorDisplayField>Closed_Lost_Reason__c</errorDisplayField>
        <errorMessage>Please provide the Reason why the Opportunity was Closed Lost</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DetailsClientsChallengeIfOtherSelected</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(BypassValidationRule__c) &amp;&amp;
!PRIORVALUE(BypassValidationRule__c) &amp;&amp; 
INCLUDES(Client_s_Biggest_Challenge__c, &apos;Other&apos;) &amp;&amp;
ISBLANK(Client_s_Biggest_Challenge_Details__c)</errorConditionFormula>
        <errorDisplayField>Client_s_Biggest_Challenge_Details__c</errorDisplayField>
        <errorMessage>Client&apos;s Biggest Challenge contains Other on the list. Please provide details.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DetailsClientsTopPriorityIfOtherSelected</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(BypassValidationRule__c) &amp;&amp;
!PRIORVALUE(BypassValidationRule__c) &amp;&amp; 
INCLUDES(Client_s_Top_Priority__c, &apos;Other&apos;) &amp;&amp;
ISBLANK(Client_s_Top_Priority_Details__c)</errorConditionFormula>
        <errorDisplayField>Client_s_Top_Priority_Details__c</errorDisplayField>
        <errorMessage>Client&apos;s Top Priority contains Other on the list. Please provide details.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Flight_Dates_Required_If_Closed_Won</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(BypassValidationRule__c) &amp;&amp; 
!PRIORVALUE(BypassValidationRule__c) &amp;&amp; 
TEXT(StageName) = &apos;Closed Won&apos; &amp;&amp;
or(ISNULL(Flight_Start__c),ISNULL(Flight_End__c)) &amp;&amp;
RecordTypeId != $Label.Opportunity_Record_Type_SaaS</errorConditionFormula>
        <errorDisplayField>Flight_Start__c</errorDisplayField>
        <errorMessage>Please fill in Start and End Dates</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IOrequiredWhenClosedWon</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(BypassValidationRule__c) &amp;&amp; 
!PRIORVALUE(BypassValidationRule__c) &amp;&amp; ISPICKVAL(StageName,&quot;Closed Won&quot;) &amp;&amp; 
ISBLANK(IO__c) &amp;&amp;
RecordTypeId != $Label.Opportunity_Record_Type_SaaS</errorConditionFormula>
        <errorDisplayField>IO__c</errorDisplayField>
        <errorMessage>Please provide IO #</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LID__Check_CompanyId_Value</fullName>
        <active>true</active>
        <description>Throws an exception message if the company id contains non-numerics</description>
        <errorConditionFormula>AND(
	(LID__LinkedIn_Company_Id__c &lt;&gt; NULL),
	NOT(ISNUMBER(LID__LinkedIn_Company_Id__c))
)</errorConditionFormula>
        <errorDisplayField>LID__LinkedIn_Company_Id__c</errorDisplayField>
        <errorMessage>CompanyId should be a numeric value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lock_Opportunity_stage_when_Closed_Won</fullName>
        <active>true</active>
        <description>Rule doesn&apos;t allow changing the stage after closing as Closed Won</description>
        <errorConditionFormula>NOT(BypassValidationRule__c) &amp;&amp; 
!PRIORVALUE(BypassValidationRule__c) &amp;&amp; 
$Profile.Name != &quot;System Administrator&quot;  &amp;&amp;
!$User.CanDeletePPs__c &amp;&amp; 
!ISNEW() &amp;&amp; 
ISPICKVAL(PRIORVALUE(StageName), &quot;Closed Won&quot;) &amp;&amp;
RecordTypeId != $Label.Opportunity_Record_Type_SaaS &amp;&amp;
!ISCHANGED(AccountId) &amp;&amp;
!ISCHANGED(Brand__c)</errorConditionFormula>
        <errorDisplayField>StageName</errorDisplayField>
        <errorMessage>The Opportunity has been closed as Closed Won. Please make any further changes on related Contract.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MarginRequiredOnClosedWon</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(BypassValidationRule__c) &amp;&amp; 
!PRIORVALUE(BypassValidationRule__c) &amp;&amp; 
ISPICKVAL(StageName, &quot;Closed Won&quot;) &amp;&amp;
ISBLANK(Percent_Margin__c) &amp;&amp;
RecordTypeId != $Label.Opportunity_Record_Type_SaaS</errorConditionFormula>
        <errorDisplayField>Percent_Margin__c</errorDisplayField>
        <errorMessage>Margin is required. Please fill it in before saving the record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MeetingNotes</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(BypassValidationRule__c) &amp;&amp; 
!PRIORVALUE(BypassValidationRule__c) &amp;&amp; 
ispickval(StageName,&quot;Meeting&quot;) &amp;&amp;
isblank(MeetingNotes__c) &amp;&amp;
RecordTypeId != $Label.Opportunity_Record_Type_SaaS</errorConditionFormula>
        <errorDisplayField>MeetingNotes__c</errorDisplayField>
        <errorMessage>Fill in Meeting Notes</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Name_cannot_contain_hyphen</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(BypassValidationRule__c) &amp;&amp; 
!PRIORVALUE(BypassValidationRule__c) &amp;&amp; 
contains(Name,&quot;-&quot;) &amp;&amp;
RecordTypeId != $Label.Opportunity_Record_Type_SaaS</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>You cannot use hyphens (-) in Opportunity name</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PlatformsRequiredOnOpportunityClosedWon</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(BypassValidationRule__c) &amp;&amp; 
!PRIORVALUE(BypassValidationRule__c) &amp;&amp; 
TEXT(StageName) == &apos;Closed Won&apos; &amp;&amp; 
NumberOfPlatforms__c &lt; 1 &amp;&amp;
RecordTypeId != $Label.Opportunity_Record_Type_SaaS</errorConditionFormula>
        <errorDisplayField>Description</errorDisplayField>
        <errorMessage>Please assign platform before closing opportunity.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ProfileConditionRequiredWhenClosedWon</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(BypassValidationRule__c) &amp;&amp; 
!PRIORVALUE(BypassValidationRule__c) &amp;&amp; 
isblank(BillingConditionName__c) &amp;&amp; 
ispickval(Account_Type__c,&quot;&quot;) &amp;&amp;
ispickval(StageName, &quot;Closed Won&quot;) &amp;&amp;
RecordTypeId != $Label.Opportunity_Record_Type_SaaS</errorConditionFormula>
        <errorDisplayField>Account_Type__c</errorDisplayField>
        <errorMessage>Billing Profile &amp; Billing Condition are required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RFP_due_date_required_on_RFP_stage</fullName>
        <active>true</active>
        <description>Forces to fill in RFP Due Date field value</description>
        <errorConditionFormula>NOT(BypassValidationRule__c) &amp;&amp; 
!PRIORVALUE(BypassValidationRule__c) &amp;&amp; 
ispickval( StageName , &quot;Proposal/Price Quote&quot;)&amp;&amp;isblank(RFP_Due_Date__c) &amp;&amp;
RecordTypeId != $Label.Opportunity_Record_Type_SaaS</errorConditionFormula>
        <errorDisplayField>RFP_Due_Date__c</errorDisplayField>
        <errorMessage>Please provide Audit/Proposal Due Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SalesCantCloseWon</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(BypassValidationRule__c) &amp;&amp; 
!PRIORVALUE(BypassValidationRule__c) &amp;&amp; 
$User.ProfileId == &quot;00eU0000000t6ZT&quot; &amp;&amp; 
$User.Client_Services_Rep__c=False &amp;&amp;
ispickval(StageName, &quot;Closed Won&quot;) &amp;&amp;
RecordTypeId != $Label.Opportunity_Record_Type_SaaS</errorConditionFormula>
        <errorDisplayField>Description</errorDisplayField>
        <errorMessage>You cannot close Opportunity as Won. Please contact assigned Client Services rep</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_date_cannot_be_after_end_date</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(BypassValidationRule__c) &amp;&amp; 
!PRIORVALUE(BypassValidationRule__c) &amp;&amp; 
Flight_Start__c &gt; Flight_End__c</errorConditionFormula>
        <errorDisplayField>Flight_Start__c</errorDisplayField>
        <errorMessage>Start Date cannot be higher then End Date. Please adjust the dates before saving the record.</errorMessage>
    </validationRules>
</CustomObject>